Hook To New Object for linked meshes causes Blender to crash #46738

Closed
opened 2015-11-10 02:34:35 +01:00 by J. W. Sargent · 7 comments

System Information
Win 7 x64
NVIDI GTX 980

Blender Version
Broken: 2.76 f337fea

Short description of error
When I tried to hook a set of vertices to a new object on a mesh that has linked object data Blender crashed. If this is expected behavior it would be good to have those options unavailable/greyed out so that users do not lose work before discovering this issue.

Exact steps for others to reproduce the error
Add a mesh
Duplicate with Alt+D
Try to hook a vertice to a new object

**System Information** Win 7 x64 NVIDI GTX 980 **Blender Version** Broken: 2.76 f337fea **Short description of error** When I tried to hook a set of vertices to a new object on a mesh that has linked object data Blender crashed. If this is expected behavior it would be good to have those options unavailable/greyed out so that users do not lose work before discovering this issue. **Exact steps for others to reproduce the error** Add a mesh Duplicate with Alt+D Try to hook a vertice to a new object
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NoviceInDisguiseProductions

Added subscriber: @NoviceInDisguiseProductions

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscribers: @Psy-Fi, @ideasman42

Added subscribers: @Psy-Fi, @ideasman42

@ideasman42, @Psy-Fi, seems to be somewhat missing update of GPU buffers?

@ideasman42, @Psy-Fi, seems to be somewhat missing update of GPU buffers?
Campbell Barton self-assigned this 2015-11-10 10:17:12 +01:00

This issue was referenced by 738bc300c7

This issue was referenced by 738bc300c7596b649a8974428b2569f2ca6483eb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46738
No description provided.