Fix T46738: Crash adding hook to linked mesh dupli